# MeiliFinder

./: .gitignore  Cargo.toml  LICENSE  README.md  instances.json  sample.instances.json
src/: api.rs  app.rs  cli.rs  constants.rs  main.rs  tui.rs  ui.rs  update.rs
src/app/: action.rs  app.rs  input.rs  mod.rs  toast.rs
src/components/: delete_modal.rs  document_preview.rs  input_bar.rs  static_widgets.rs  status_bar.rs
src/utilities/: config_handler.rs  helpers.rs  scrolling_handler.rs
src/views/: documents.rs  indices.rs  instances.rs  tasks.rs
