[package]
name = "MeiliFinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
crossterm = "0.27.0"
ratatui = "0.23.0"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = {verion="1.36.0", features = ["full"]}
meilisearch-sdk = "0.24.3"