[package]
name = "MeiliFinder"
authors = ["Faisal Ahmed"]
description = "The ultimate MeiliSearch client for your terminal!"
version = "1.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
crossterm = "0.27.0"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = {verion="1.36.0", features = ["full"]}
meilisearch-sdk = "0.24.3"