[package]
name = "meilifinder"
authors = ["Faisal Ahmed"]
description = "The ultimate Meilisearch client for your terminal"
version = "1.0.6"
edition = "2021"
license = "MIT"

include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENCE"
]
homepage = "https://github.com/FaisalBinAhmed/MeiliFinder"
repository = "https://github.com/FaisalBinAhmed/MeiliFinder"
keywords = [
	"cli",
	"meilisearch",
    "search",
    "command-line",
    "search-client"
]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
crossterm = "0.27.0"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"]}
meilisearch-sdk = "0.24.3"